fix: contrast error found during accessibility testing

--- a/home/static/home/css/home.css
+++ b/home/static/home/css/home.css
@@ -25,6 +25,7 @@ p {
     margin: auto 0;
     font-size: 4rem;
     padding-top: 150px;
+    background-color: rgba(0, 0, 0, 0.75);
 }
 
 /* 2. Classes Table */
